--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+
     <h1> My Birthdays </h1>
 
     <div id="loader"> 
@@ -22,8 +23,8 @@
     
     <div id="list">
         <input v-model="search" type="search" placeholder="Search a name...">
-        <div class="friendsList" v-for="(friend, index) in result" v-on:click="displayProfile(index)">
-            <img :src="friend.picture ? friend.picture : 'profile.svg'"  alt="">
+        <div class="friendsList" v-for="(friend, index) in result" v-on:click="displayProfile(index)" v-on:keydown.enter="displayProfile(index)"  tabindex="0">
+            <img :src="friend.picture ? friend.picture : 'profile.svg'"  alt= "avatar">
                     <div class="flexCol">
                         <h3>{{ friend.name }}</h3>
                         <span>{{ friend.birthdate.replace(/-/g,"/") }}</span>
@@ -57,8 +58,9 @@
                     <input v-model="inputName" placeholder="Enter a name"> <br>
                     <label for="inputBirthdate"> Birth date </label>
                     <input v-model="inputBirthdate" type="date" placeholder="Enter a birthdate"> <br>
-                    <label for="inputPicture"> Picture </label>
-                    <input v-model="inputPicture" placeholder="Enter an image URL adress"> <br>
+                    <!-- <label for="inputPicture"> Picture </label> -->
+                    <!-- <input v-model="inputPicture" placeholder="Enter an image URL adress"> <br> -->
+                    <input type="file" id="files" @change="processFile" > <br>
                     <button v-on:click="addFriend"> Add </button>
                 </form>
 
@@ -70,7 +72,7 @@
                     <input v-model="inputPresent" placeholder="Enter a present"> <br>   
                     <button v-on:click="addPresent()"> Add </button>
                 </form>
-                <span v-on:click="displayBloc = !displayBloc"> Close </span>
+                <span tabindex="0" v-on:keydown.enter="displayBloc = !displayBloc" v-on:click="displayBloc = !displayBloc"> Close </span>
         </div>
 
 <!-- PROFILE  -->
