--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <Link type="text/css" rel="StyleSheet" href="style.css"/>    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -87,9 +88,9 @@
             <div class="upperProfile">
                 
                 <div class="profileBar">
-                    <button v-on:click="closeProfile"> Close </button>
+                    <button v-on:click="closeProfile"> <i class="fa fa-arrow-left"></i> </button>
                     
-                    <button v-on:click="removeFriend()"> Delete </button>
+                    <button v-on:click="removeFriend()"> <i class="fa fa-trash"></i> </button>
                 </div>
                 <h3> {{ element.name}} </h3>
 
